--- a/app/src/main/res/layout/activity_about_nadget.xml
+++ b/app/src/main/res/layout/activity_about_nadget.xml
@@ -14,18 +14,19 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:text="Nadget"
+        android:text="@string/logo"
         android:id="@+id/title"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="#3B3131"
         android:gravity="center_horizontal|bottom"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="36dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:id="@+id/version"
         android:layout_gravity="bottom|center_horizontal"
-        android:text="Version 0.1 "
+        android:text="Version 1.0"
         android:linksClickable="true"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
 
@@ -41,13 +42,9 @@
         android:layout_height="71dp"
         android:id="@+id/description"
         android:layout_gravity="center_horizontal"
-        android:text="Curated news about gadgets and mobiles
-
-                    (c) Danesh Zaki
-
-                    http://www.pleb.in"
+        android:text="Curated news about gadgets and mobiles \n (c) Danesh Zaki http://www.pleb.in"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:lines="5"
+        android:lines="2"
         android:linksClickable="true"
         android:layout_weight="0.09"
         android:textColor="#3B3131"
