--- a/app/src/main/res/layout/main_view_row.xml
+++ b/app/src/main/res/layout/main_view_row.xml
@@ -39,24 +39,49 @@
             android:paddingBottom="5dp"
             android:lines="2" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/postDate"
-            android:textAlignment="center"
-            android:textStyle="italic"
-            android:gravity="center"
-            android:textSize="14dp"
-            android:textColor="#3B3131"
-            android:paddingLeft="7dp"
-            android:paddingTop="10dp"
-            android:paddingRight="7dp"
-            android:paddingBottom="5dp"
-            />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal">
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/postDate"
+                android:textAlignment="center"
+                android:textStyle="italic"
+                android:gravity="center"
+                android:textSize="14dp"
+                android:textColor="#3B3131"
+                android:paddingLeft="7dp"
+                android:paddingTop="10dp"
+                android:paddingRight="7dp"
+                android:paddingBottom="5dp"
+                />
 
-        <ImageView
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/saveArticle"
+                    android:src="@drawable/ic_action_favorite_grey"
+                    android:layout_toEndOf="@id/postDate"
+                    android:background="#ffffff"
+                     />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/shareArticle"
+                    android:src="@drawable/ic_action_share_grey"
+                    android:layout_gravity="right"
+                    android:layout_toEndOf="@id/saveArticle"
+                    android:background="#ffffff"
+                     />
+
+            </RelativeLayout>
+
+            <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/postImage"
@@ -65,6 +90,7 @@
             android:paddingRight="7dp"
             android:paddingBottom="15dp"
             android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
