--- a/app/src/main/res/layout/settings_toolbar.xml
+++ b/app/src/main/res/layout/settings_toolbar.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
+
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
     app:navigationContentDescription="@string/abc_action_bar_up_description"
-    android:background="?attr/colorPrimary"
+    android:background="#3b3131"
     app:navigationIcon="?attr/homeAsUpIndicator"
-    app:title="@string/action_settings"
-    />
+    app:title="@string/action_settings" />
