--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -15,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true">
@@ -40,44 +39,46 @@
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:elevation="4dp"
-                        app:layout_collapseMode="pin"
                         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                        app:layout_collapseMode="pin"
                         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
-                        </android.support.v7.widget.Toolbar>
+                    </android.support.v7.widget.Toolbar>
 
                 </android.support.design.widget.CollapsingToolbarLayout>
-                </android.support.design.widget.AppBarLayout>
+            </android.support.design.widget.AppBarLayout>
 
-            <ImageView
-                android:id="@+id/empty_view"
+            <TextView
+                android:id="@+id/empty_view_logo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|center_vertical"
-                android:visibility="gone"
+                android:text="@string/shortlogo"
                 android:textColor="#3B3131"
-                android:textStyle="bold"
-                android:textSize="16dp"
-                android:src="@drawable/empty_message"
-                android:text="@string/no_data_available" />
+                android:textSize="24sp"
+                android:visibility="gone" />
 
-            <com.wang.avi.AVLoadingIndicatorView
-                android:id="@+id/loading_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="visible"
-                app:indicator="BallGridPulse"
-                app:indicator_color="#3B3131" />
+            <TextView
+                android:id="@+id/empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_anchor="@+id/empty_view_logo"
+                android:gravity="center|center_vertical"
+                android:src="@drawable/empty_message"
+                android:text="@string/no_data_available"
+                android:textColor="#3B3131"
+                android:textSize="16sp"
+                android:visibility="gone" />
 
             <fragment
-                    android:name="in.pleb.nadget.MainFragment"
-                    android:id="@+id/main_fragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/placeholder"
-                    tools:layout="@layout/main_fragment"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                android:id="@+id/main_fragment"
+                android:name="in.pleb.nadget.MainFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/placeholder"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:layout="@layout/main_fragment" />
 
         </android.support.design.widget.CoordinatorLayout>
     </FrameLayout>
