--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="192dp"
+    android:layout_marginTop="30dp"
     android:background="@drawable/nadgethdr4"
     android:gravity="bottom"
     android:orientation="vertical">
