--- a/app/src/main/res/layout/main_view_row.xml
+++ b/app/src/main/res/layout/main_view_row.xml
@@ -9,8 +9,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10sp"
-        app:cardElevation="3sp"
+        app:cardCornerRadius="5sp"
+        app:cardElevation="1sp"
         android:layout_gravity="center"
         app:cardUseCompatPadding="true"
         android:id="@+id/cv">
@@ -35,7 +35,8 @@
             android:paddingTop="10dp"
             android:paddingRight="7dp"
             android:paddingBottom="2dp"
-            android:lines="2" />
+            android:lines="2"
+            android:ellipsize="end"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
